# time-series-anomaly-platform

./: .gitignore  LICENSE  README.md  ci.yml  config.yaml  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 01_eda.ipynb  02_isolation_forest.ipynb  03_lstm_autoencoder.ipynb
src/data/: feature_engineering.py  preprocess.py
src/evaluation/: false_positive_analysis.py  metrics.py
src/models/: prophet_model.py
src/models/isolation_forest/: __init__.py  data_prep.py  predict.py  run.py  train.py  visualize.py
src/models/lstm_autoencoder/: __init__.py  data_prep.py  model.py  predict.py  run.py  train.py  visualize.py
src/utils/: logger.py
tests/: test_isolation_forest.py  test_lstm.py  test_prophet_model.py
