[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "icu-anomaly-detection"
version = "0.1.0"
description = "Three-model unsupervised anomaly detection on ICU vital signs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.0",
    "numpy>=1.26",

    # Models
    "scikit-learn>=1.4",
    "prophet==1.1.5",
    "tensorflow>=2.15",
    "keras>=2.15",

    # Serialisation
    "joblib>=1.3",

    # Config
    "pyyaml>=6.0",

    # Visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Dashboard
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[project.scripts]
# Run full pipeline end-to-end
icu-pipeline = "src.data.preprocess:run_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function call in default args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]   # allow unused imports in tests

# ── mypy (type checking) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
exclude = ["notebooks/", "venv/"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (real model fits) — deselect with -m 'not slow'",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py", "*/notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]